# x86rs

./: readme.md
rust-reference/: Cargo.toml  build.rs  compile-nostd-dbg.sh  compile-nostd.sh  emit-asm.sh
rust-reference/.cargo/: config.toml
rust-reference/src/: lib.rs  main.asm  main.rs  sys.rs
